@@ -16,25 +16,19 @@ repositories {
 }
 
 dependencies {
-    compile group: 'org.mongodb', name: 'mongo-java-driver', version: '3.6.3'
+    implementation group: 'org.mongodb', name: 'mongo-java-driver', version: '3.6.3'
     implementation group: 'org.openjfx', name: 'javafx', version: '11', ext: 'pom'
-    compile 'com.fazecast:jSerialComm:[2.0.0,3.0.0)'
-    testCompile('org.junit.jupiter:junit-jupiter-api:5.3.1')
-    testCompile('org.junit.jupiter:junit-jupiter-engine:5.3.1')
+    implementation 'com.fazecast:jSerialComm:[2.0.0,3.0.0)'
+    testImplementation('org.junit.jupiter:junit-jupiter-api:5.3.1')
+    testImplementation('org.junit.jupiter:junit-jupiter-engine:5.3.1')
 }
 
 javafx {
     modules = [ 'javafx.controls', 'javafx.fxml', 'javafx.graphics' ]
     version = '11.0.2'
     application {
-        def javafxHome = System.getenv('JAVAFX_HOME')
         mainClassName = 'gui.Main'
         applicationName = 'foo-app'
-        applicationDefaultJvmArgs = [
-                "--module-path=${javafxHome}" + File.separator + 'lib',
-                '--add-modules=javafx.controls,javafx.graphics',
-                '-Dprism.forceGPU=true']
-        println("applicationDefaultJvmArgs:" + applicationDefaultJvmArgs)
     }
 }
 
